refactor(javadoc): remove redundant source references and verbose comments
Many Javadocs contained duplicate upstream source references (e.g., both "tui4j: ..."
and "Bubbles: ...") and overly verbose method-level documentation that restated
obvious behavior like "Handles with width for this component". This removes redundancy
while preserving essential source attribution and meaningful documentation.

- Remove duplicate "Bubbles: *.go" references where "tui4j: ..." path exists
- Remove boilerplate method-level Javadocs that don't add value
- Retain class-level documentation and meaningful comments