@@ -9,9 +9,7 @@ import java.util.LinkedList;
 
 /**
  * Port of Bubbles default data source.
- * Bubbles: list/list.go.
- * <p>
- * Bubbles: filepicker/hidden_windows.go.
+ * Bubbles: bubbles/list/list.go
  */
 public class DefaultDataSource implements ListDataSource {
 
@@ -74,7 +72,7 @@ public class DefaultDataSource implements ListDataSource {
      * @return refresh command
      */
     public Command setItems(Item... items) {
-        this.items = new ArrayList<>(Arrays.asList(items));
+        this.items = java.util.List.of(items);
         return list.refresh();
     }
 
@@ -87,14 +85,6 @@ public class DefaultDataSource implements ListDataSource {
         return items == null || items.isEmpty();
     }
 
-    /**
-     * Handles fetch items for this component.
-     *
-     * @param page page
-     * @param perPage per page
-     * @param filterValue filter value
-     * @return result
-     */
     @Override
     public FetchedItems fetchItems(int page, int perPage, String filterValue) {
         java.util.List<FilteredItem> filteredItems;
@@ -121,30 +111,17 @@ public class DefaultDataSource implements ListDataSource {
         }
 
         int offset = page * perPage;
+        int toIndex = Math.min(offset + perPage, filteredItems.size());
         long matchedItems = filteredItems.size();
         long totalItems = items.size();
         int totalPages = (int) Math.ceil((double) matchedItems / perPage);
 
-        if (matchedItems == 0) {
-            return new FetchedItems(java.util.List.of(), 0, totalItems, 0);
-        }
-
-        if (offset >= matchedItems && offset - perPage >= 0) {
+        if (offset >= matchedItems/* && offset - perPage >= 0*/) {
             offset = offset - perPage;
         }
-        if (offset < 0) {
-            offset = 0;
-        }
-
-        int toIndex = Math.min(offset + perPage, filteredItems.size());
         return new FetchedItems(filteredItems.subList(offset, toIndex), matchedItems, totalItems, totalPages);
     }
 
-    /**
-     * Handles all items as filtered items for this component.
-     *
-     * @return result
-     */
     private java.util.List<FilteredItem> allItemsAsFilteredItems() {
         return items.stream().map(FilteredItem::new).toList();
     }
